--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-roboto), sans-serif;
+}
+
 @keyframes marquee-left {
   0% {
     transform: translateX(0%);
