--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,9 @@ body {
   font-family: var(--font-carlito), sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 
 @keyframes marquee-left {
   0% {
