--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,14 +47,18 @@
   --radius-4xl: calc(var(--radius) + 16px);
 }
 
-@media (prefers-color-scheme: dark) {
+ /* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+}  */
 
 body {
+
+  background: var(--background);
+  color: var(--foreground);
+
   font-family: var(--font-carlito), sans-serif;
 }
 
